# bizi

./: .gitignore  .release-please-manifest.json  Cargo.toml  README.md  biome.jsonc  package.json  pnpm-lock.yaml  release-please-config.json  task.config.json
.cursor/plans/: cross-compile_tui_distribution_36b2edd1.plan.md  release-please_monorepo_setup_3506fc41.plan.md  server_deployment_plan_08d9e4f0.plan.md  task_caching_implementation_292b613f.plan.md
.github/: pull_request_template.md
.github/workflows/: publish-npm.yml  release-please.yml  release.yml
apps/tui/: CHANGELOG.md  README.md  package.json  task.config.json
apps/tui/scripts/: build.ts
apps/tui/src/: index.tsx  types.ts
apps/tui/src/commands/: cancel.ts  cli.ts  init.ts  run.ts  stat.ts
apps/tui/src/components/: RunDetailsPanel.tsx  StatusFooter.tsx  TaskTreeNodeCard.tsx  TaskTreePanel.tsx  quit-confirmation-dialog.tsx  run-details-panel.tsx  status-footer.tsx  status-indicator.tsx  task-tree-node-card.tsx  task-tree-panel.tsx
apps/tui/src/lib/: app-context.tsx  args.ts  bizi-api.ts  cli-prompts.ts  cli-task-runs.ts  keyboard-shortcuts.ts  logs.test.ts  logs.ts  selection-copy.ts  status.ts  task-runs.ts  task-structure.ts
apps/www/: README.md  jsrepo.config.ts  package.json
apps/www/src/: app.d.ts  app.html
apps/www/src/lib/: utils.ts
apps/www/src/routes/: +layout.svelte  +page.svelte  layout.css
apps/www/static/: setup.md
crates/bizi/: Cargo.toml
crates/bizi-server/: CHANGELOG.md  Cargo.toml  README.md
crates/bizi-server/src/: main.rs
crates/bizi-server/src/api/: mod.rs  tasks.rs
crates/bizi-server/src/config/: mod.rs
crates/bizi-server/src/db/entities/: mod.rs
crates/bizi/src/: main.rs
docs/: SPEC.md
schemas/: task.config.json
scripts/: generate.mjs  generate.ts  install  uninstall
services/server/: Cargo.toml
services/server/src/: lib.rs  main.rs
services/server/src/api/: error.rs  mod.rs  tasks.rs
services/server/src/config/: mod.rs
services/server/src/db/: mod.rs  schema.rs
services/server/src/db/entities/: mod.rs  task_run.rs  task_run_log.rs
services/server/src/db/migration/: m20260212_000001_create_task_runs.rs  m20260212_000002_create_task_run_logs.rs  mod.rs
(+29 files in other folders)
