[package]
name = "bizi-server"
version = "0.2.0"
edition = "2024"
description = "Task runner server for the bizi project"
repository = "https://github.com/ieedan/bizi"
homepage = "https://getbizi.dev"
license = "MIT"

[[bin]]
name = "bizi-server"
path = "src/main.rs"

[dependencies]
axum = { version = "0.7", features = ["ws"] }
tokio = { version = "1", features = ["rt-multi-thread", "macros", "net", "fs", "process", "sync", "signal"] }
utoipa = { version = "4" }
utoipa-swagger-ui = { version = "7", features = ["axum"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1.0.101"
thiserror = "1.0"
clap = { version = "4", features = ["derive"] }
sea-orm = { version = "1", default-features = false, features = ["macros", "sqlx-sqlite", "runtime-tokio-rustls"] }
sea-orm-migration = { version = "1", default-features = false, features = ["sqlx-sqlite", "runtime-tokio-rustls"] }
nanoid = "0.4.0"
chrono = "0.4.43"
libc = "0.2"
futures-util = "0.3"

