[package]
name = "server"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.7"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "net", "fs"] }
utoipa = { version = "4" }
utoipa-swagger-ui = { version = "7", features = ["axum"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1.0.101"
thiserror = "1.0"
