[package]
name = "server"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.7"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "net", "fs", "process", "sync"] }
utoipa = { version = "4" }
utoipa-swagger-ui = { version = "7", features = ["axum"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1.0.101"
thiserror = "1.0"
clap = { version = "4", features = ["derive"] }
sea-orm = { version = "1", default-features = false, features = ["macros", "sqlx-sqlite", "runtime-tokio-rustls"] }
sea-orm-migration = { version = "1", default-features = false, features = ["sqlx-sqlite", "runtime-tokio-rustls"] }
nanoid = "0.4.0"
chrono = "0.4.43"
